k8s/monitoring/uptime-kuma/uptime-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuma
  namespace: kuma
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - uptime-kuma.blinddateg3.xyz
      secretName: blinddateg3-uptime-kuma-tls
  rules:
    - host: uptime-kuma.blinddateg3.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: uptime-kuma-service
                port:
                  number: 3010
